--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <div class="txt">
           ハローワールド！<br>
           これが初めてのページです。このページは練習用のページですのでポートフォリオとは関係ありません。<br>
-          私がよく見るサイトは<a href="http://youtube.com" target='_blank'>YouTube</a>です。
+          私がよく見るサイトは<a href="https://www.netflix.com/browse" target='_blank'>YouTube</a>です。
+          <img src="kookok.png">
+
         </div>
       </div>
       <div class="btns">
