--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="txt">
           ハローワールド！<br>
           これが初めてのページです。このページは練習用のページですのでポートフォリオとは関係ありません。<br>
-          私がよく見るサイトは<a href="https://www.netflix.com/browse" target='_blank'>YouTube</a>です。
-          <img src="kookok.png">
+          私がよく見るサイトは<a href="" target='_blank'>YouTube</a>です。
+         
 
         </div>
       </div>
