--- a/practice.html
+++ b/practice.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial=scale=1.0">
 <title>練習</title>
 </head>
+<limk rel="stylesheet" href="./style.css" />
 <body>
 <div class="info">
    <h1 id="title">練習</h1>
