--- a/namecard.html
+++ b/namecard.html
@@ -9,7 +9,7 @@
   <body>
     <div id="container">
       <div class="info">
-        <div class="name">山田一郎</div>
+        <div class="name">吉田　崇浩</div>
         <div class="txt">
           <img class="frame" src="./images/namecard2.png" alt="">
         </div>
