--- a/practice.html
+++ b/practice.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial=scale=1.0">
 <title>練習</title>
 </head>
-<limk rel="stylesheet" href="./style.css" />
+<limk rel="stylesheet" href="./index.html" />
 <body>
 <div class="info">
    <h1 id="title">練習</h1>
@@ -32,8 +32,8 @@
  
    </div>
    <div class="btns">
-       <a class="prev btn" href="#">prev</a>
-       <a class="next btn" href="#">next</a>
+     <a class="prev btn" href="./index.html">prev</a>
+        <a class="next btn" href="./namecard.html">next</a>
    </div>
 </div>
 </body>
