--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       </header>
 
       <main>
-        <h1>白石の学習進捗ページ</h1>
-        <p class="main_pic"><img src="./assets/images/main.jpg" alt=""></p>
+        <h1>吉田くんの脳ない</h1>
+        <p class="main_pic"><img src="./assets/images/samune.png" alt=""></p>
         <h2>履修科目</h2>
         <div class="period">
           <h3>前期</h3>
