--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <main>
         <h1>吉田くんの脳ない</h1>
-        <p class="main_pic"><img src="./assets/images/samune.png" alt=""></p>
+        <p class="main_pic"><img src="samune.png" alt=""></p>
         <h2>履修科目</h2>
         <div class="period">
           <h3>前期</h3>
