--- a/index.html
+++ b/index.html
@@ -24,18 +24,15 @@
 
       <main>
         <h1>吉田くんの脳ない</h1>
-        <p class="main_pic"><img src="samune.png" alt=""></p>
-        <h2>履修科目</h2>
+        <p class="main_pic"><img src="samune.png
+          " alt=""></p>
+        <h2>将来の夢</h2>
+        <div class="period">
+        </div>
         <div class="period">
           <h3>前期</h3>
           <ol>
-            <li><a href="./subjects/swnwb1.html">ソフトウェアネットワーク演習Ⅰ</a></li>
-          </ol>
-        </div>
-        <div class="period">
-          <h3>後期</h3>
-          <ol>
-            <li>ソフトウェアネットワーク演習Ⅱ</li>
+            <li>プロトタイピング基礎</li>
             <li>クロステックデザイン演習Ⅲ</li>
           </ol>
           <h2><a href="./cv.html">自己紹介</a></h2>
@@ -43,7 +40,7 @@
       </main>
 
       <footer>
-        <p>KUAD クロステックデザインコース 2019</p>
+        <p>KUAD クロステックデザインコース 2020</p>
       </footer>
 
     </div>
