--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav id='main_nav'>
           <ul>
             <li><span>Home</sapn></li>
-            <li><a href="./subjects/swnwb1.html">SwNwBasis:1</a></li>
+            <li><a href="./subjects/swnwb1.html">SwNwBasi</a></li>
             <li><a href="./cv.html">CV</a></li>
           </ul>
         </nav>
@@ -26,7 +26,7 @@
         <h1>吉田くんの脳ない</h1>
         <p class="main_pic"><img src="samune.png
           " alt=""></p>
-        <h2>将来の夢</h2>
+        <h2>いろんなことが頭の中でグールグル</h2>
         <div class="period">
         </div>
         <div class="period">
