--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav id='main_nav'>
           <ul>
             <li><span>Home</sapn></li>
-            <li><a href="./subjects/swnwb1.html">SwNwBasi</a></li>
+            <li><a href="./subjects/swnwb1.html">作ったもの</a></li>
             <li><a href="./cv.html">CV</a></li>
           </ul>
         </nav>
