--- a/subjects/swnwb1.html
+++ b/subjects/swnwb1.html
@@ -16,17 +16,19 @@
         <nav id='main_nav'>
           <ul>
             <li><a href="../index.html">Home</a></li>
-            <li><span>SwNwBasis:1</span></li>
+            <li><span>作ったもの！</span></li>
             <li><a href="../cv.html">CV</a></li>
           </ul>
         </nav>
       </header>
 
       <main>
-        <h1>ソフトウェアネットワーク演習</h1>
+        <h1>メディアリテラシー基礎</h1>
         <div class="session">
           <h2>Session:1</h2>
-          <h3>課題：Photoshopでトップページ画像を作成する</h3>
+          <h3>名詞の作成</h3>
+          <p class="main_pic"><img src="meisi.png
+            " alt=""></p>
           <p>
             ここにどのようにして，課題を作成したのか？を記述してください．
             <br>写真を入れたり，動画を埋め込んだりするととてもいい．
