--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 
       <main>
         <h1>吉田くんの脳ない</h1>
-        <p class="main_pic"><img src="samune.png
-          " alt=""></p>
+        <p class="main_pic"><img src="samune.png " alt=""></p>
         <h2>いろんなことが頭の中でグールグル</h2>
         <div class="period">
         </div>
