--- a/subjects/swnwb1.html
+++ b/subjects/swnwb1.html
@@ -27,7 +27,7 @@
         <div class="session">
           <h2>Session:1</h2>
           <h3>名詞の作成</h3>
-          <p class="sub_pic"><img src="meisi.jpg" alt=""></p>
+          <p class="sub_pic"><img src="meisiのコピー.png" alt=""></p>
 
             ここにどのようにして，課題を作成したのか？を記述してください．
             <br>写真を入れたり，動画を埋め込んだりするととてもいい．
