--- a/subjects/swnwb1.html
+++ b/subjects/swnwb1.html
@@ -28,9 +28,9 @@
           <h2>Session:1</h2>
           <h3>名詞の作成</h3>
           <p class="sub_pic"><img src="meisiのコピー.png" alt=""></p>
-
-            ここにどのようにして，課題を作成したのか？を記述してください．
-            <br>写真を入れたり，動画を埋め込んだりするととてもいい．
+          文字のフォントが思ったより見にくくなってしまって使うところを選ぶフォントがあるなと感じた
+            <br>自分の名前は四角が多く動きがないためななめにおいても見た
+            <br>あっツイッターフォローしてね！
           </p>
         </div>
         <div class="session">
