--- a/subjects/swnwb1.html
+++ b/subjects/swnwb1.html
@@ -35,11 +35,10 @@
         </div>
         <div class="session">
           <h2>Session:2</h2>
-          <h3>WebPageの構造</h3>
-          <p>HTMLを使ったWebPageの構造を、</p>
+          <h3>解像度の変更と配置</h3>
+          <p>ケータイでこのクォリティの写真は撮れるんです！</p>
           <ul>
-            <li>どのように作ったか？</li>
-            <li>自分なりのこだわりは？</li>
+            <li>コロナで閑散とした場所で撮ったので余白を出してその雰囲気を出せた</li>
           </ul>
         </div>
         <div class="session">
