--- a/subjects/swnwb1.html
+++ b/subjects/swnwb1.html
@@ -26,7 +26,7 @@
         <h1>メディアリテラシー基礎</h1>
         <div class="session">
           <h2>Session:1</h2>
-          <h3>名詞の作成</h3>
+          <h3>名刺の作成</h3>
           <p class="sub_pic"><img src="meisiのコピー.png" alt=""></p>
           文字のフォントが思ったより見にくくなってしまって使うところを選ぶフォントがあるなと感じた
             <br>自分の名前は四角が多く動きがないためななめにおいても見た
@@ -37,14 +37,18 @@
           <h2>Session:2</h2>
           <h3>解像度の変更と配置</h3>
           <p>ケータイでこのクォリティの写真は撮れるんです！</p>
+          <p class="sub_pic"><img src="kaizoudo-1.png" alt=""></p>
           <ul>
             <li>コロナで閑散とした場所で撮ったので余白を出してその雰囲気を出せた</li>
           </ul>
         </div>
         <div class="session">
           <h2>Session:3</h2>
-          <h3>スタイルをあてる</h3>
-          <p>スタイル（デザイン）を反映して、Pageを公開する</p>
+          <h3>webの改変</h3>
+          <p class="sub_pic"><img src="webweb.png" alt=""></p>
+          <p>京都芸術大学のホームページを色々いじってみた
+            <br>ミュータントの学校があったらこんなホームページなんだと想像した
+          </p>
         </div>
       </main>
 
