--- a/cv.html
+++ b/cv.html
@@ -24,23 +24,35 @@
 
       <main>
         <h1>自己紹介</h1>
-        <div class="youtube">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/YuRCme77K3w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="mb_l">
-          <p>私は白石晃一です．</p>
-          <p>私は38歳です．</p>
+          <p>吉田崇浩です．</p>
+          <p>超絶多趣味です．</p>
           <p>
-            私は，36歳の妻と，6歳の三毛猫と，3歳の息子と同居しています．
-            <br>息子は「ギャーギャー」ととてもうるさいため，猫はいつも寝室に避難しています．
-            <br>妻と猫は相思相愛なので，妻の後ろを金魚のフンのように付いて回りますが，私に懐いていません．
+            趣味を紹介します
+            <br>マーベルの追いかけMCU作品見たり原作読んだり
+            <br>ネットフリックス巡回(洋画観賞なんでも見てます)
+            <br>人と話すこと！
+            <br>ラーメン巡り
+            <br>ポケモンカード（たまーに大会出てます）
+            <br>遊戯王
+            <br>ボーリング（月２〜４くらい行く）
+            <br>海釣り（始めたばっか）
+            <br>バイク(ツーリング、改造)
+            <br>自転車（ロードバイク）
+            <br>クトゥルフ TRPG（誰かやろ）
+            <br>写真とるのも大好きです
+            <br>趣味が多すぎて破産しそうてかお金足りない！！！
+            <br>工業高校出身です！金属加工できます。
+            <br>人見知りなんてしません、羞恥心どっかに置いてきました
+
           </p>
         </div>
         <p class="sub_pic"><img src="./assets/images/statue.jpg" alt=""></p>
       </main>
 
       <footer>
-        <p>KUAD クロステックデザインコース 2019</p>
+        <p>KUAD クロステックデザインコース 2020</p>
       </footer>
     </div>
   </body>
