--- a/cv.html
+++ b/cv.html
@@ -42,13 +42,14 @@
             <br>自転車（ロードバイク）
             <br>クトゥルフ TRPG（誰かやろ）
             <br>写真とるのも大好きです
+            <br>ポーカーやります（テキサスフォールダム）
             <br>趣味が多すぎて破産しそうてかお金足りない！！！
             <br>工業高校出身です！金属加工できます。
             <br>人見知りなんてしません、羞恥心どっかに置いてきました
 
           </p>
         </div>
-        <p class="sub_pic"><img src="./assets/images/statue.jpg" alt=""></p>
+        <p class="sub_pic"><img src="ra-menn.jpg" alt=""></p>
       </main>
 
       <footer>
