--- a/cv.html
+++ b/cv.html
@@ -49,7 +49,7 @@
 
           </p>
         </div>
-        <p class="sub_pic"><img src="ra-menn.jpg" alt=""></p>
+        <p class="sub_pic"><img src="png" alt=""></p>
       </main>
 
       <footer>
