--- a/cv.html
+++ b/cv.html
@@ -30,26 +30,26 @@
           <p>超絶多趣味です．</p>
           <p>
             趣味を紹介します
-            <br>マーベルの追いかけMCU作品見たり原作読んだり
-            <br>ネットフリックス巡回(洋画観賞なんでも見てます)
-            <br>人と話すこと！
-            <br>ラーメン巡り
-            <br>ポケモンカード（たまーに大会出てます）
-            <br>遊戯王
-            <br>ボーリング（月２〜４くらい行く）
-            <br>海釣り（始めたばっか）
-            <br>バイク(ツーリング、改造)
-            <br>自転車（ロードバイク）
-            <br>クトゥルフ TRPG（誰かやろ）
-            <br>写真とるのも大好きです
-            <br>ポーカーやります（テキサスフォールダム）
-            <br>趣味が多すぎて破産しそうてかお金足りない！！！
-            <br>工業高校出身です！金属加工できます。
-            <br>人見知りなんてしません、羞恥心どっかに置いてきました
+            <br>    マーベルの追いかけMCU作品見たり原作読んだり
+            <br>    ネットフリックス巡回(洋画観賞なんでも見てます)
+            <br>    人と話すこと！
+            <br>    ラーメン巡り
+            <br>    ポケモンカード（たまーに大会出てます）
+            <br>    遊戯王
+            <br>    ボーリング（月２〜４くらい行く）
+            <br>    海釣り（始めたばっか）
+            <br>    バイク(ツーリング、改造)
+            <br>    自転車（ロードバイク）
+            <br>    クトゥルフ TRPG（誰かやろ）
+            <br>    写真とるのも大好きです
+            <br>     ポーカーやります（テキサスフォールダム）
+            <br>    趣味が多すぎて破産しそうてかお金足りない！！！
+            <br>    工業高校出身です！金属加工できます。
+            <br>    人見知りなんてしません、羞恥心どっかに置いてきました
 
           </p>
         </div>
-        <p class="sub_pic"><img src="png" alt=""></p>
+        <p class="sub_pic"><img src="rara.png" alt=""></p>
       </main>
 
       <footer>
