--- a/cv.html
+++ b/cv.html
@@ -24,7 +24,7 @@
 
       <main>
         <h1>自己紹介</h1>
-        </div>
+        <td align="center">
         <div class="mb_l">
           <p>吉田崇浩です．</p>
           <p>超絶多趣味です．</p>
@@ -42,13 +42,14 @@
             <br>    自転車（ロードバイク）
             <br>    クトゥルフ TRPG（誰かやろ）
             <br>    写真とるのも大好きです
-            <br>     ポーカーやります（テキサスフォールダム）
+            <br>    ポーカーやります（テキサスフォールダム）
             <br>    趣味が多すぎて破産しそうてかお金足りない！！！
             <br>    工業高校出身です！金属加工できます。
             <br>    人見知りなんてしません、羞恥心どっかに置いてきました
 
           </p>
-        </div>
+        </td>
+        
         <p class="sub_pic"><img src="rara.png" alt=""></p>
       </main>
 
