--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <h1>吉田くんの脳ない</h1>
         <p class="main_pic"><img src="samune.png " alt=""></p>
         <h2>いろんなことが頭の中でグールグル</h2>
+        <p>↑自分で書きましたこういう作業好きです病ん出ませんよ！</p>
         <div class="period">
         </div>
         <div class="period">
